content added in some pages, navbar-bottom changed to footer in 'home' section, class changed for tribute project

--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@ tr td img
 	<div class="container-fluid" style="background-color: #F8F8F8; margin-top: 25px; margin-bottom: 25px">
 		<div class="row">
 			<div class="col-sm-offset-1 col-sm-9 intro" style="margin-top: 25px; margin-bottom: 25px">
-				<p class="">Web Developer Full-Stack for about a year. I like learning new things and getting better everyday.</p>
+				<p class="">Full-Stack Web Developer for about a year. I like learning new things and getting better everyday.</p>
 				<p>I am known for my punctuality and for being a hard-working person.</p>
 			</div>
 			<div class="col-sm-2">
@@ -171,13 +171,19 @@ tr td img
 	      <h3>Education</h3>
 	      <div class="table-responsive">
 	      <table>
+	        <tr>
+	     		<th style="width: 170px">Sept 2016</th>
+	    		<th>
+	   			 Ip Formation
+	      		</th>
+	      		<td>Pursuing my education for a Master's Degree in Web Development, I'm looking for a company to work for a professional contract.</td>
+	    	</tr>
 	     	<tr>
 	     		<th>2016</th>
 	    		<th>
 	   			 It Akademy 
 	      		</th>
 	      		<td>Web and Mobile Apps Developer</td>
-	      		
 	    	</tr>
 	    	<tr>
 	     		<th>2014</th>
@@ -204,6 +210,7 @@ tr td img
 	      <h3>Hobbies</h3>
 	      <ul>
 	      	<li>Martial Arts</li>
+	      	Martial arts tought me discipline and a sense of competition among others.
 	      		<ul>
 	      			<li>Kung-Fu Wushu
 	      			<br>
