--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 
 	<style>
 
-	.imgKwoon
+	.imgKwoon, .imgTribute
 	{
 		max-height: 300px;
 		max-width: 100%;
@@ -28,7 +28,7 @@
 	}
 
 	
-	.imgKwoon:hover
+	.imgKwoon:hover, .imgTribute:hover
 	{
 		opacity: 0.8;
 	}
@@ -97,7 +97,7 @@
 
 			<div class="col-md-4 col-sm-6 colPortfolio text-center">
 				<figure>
-					<img class="imgKwoon" src="images/tributePage.jpg" data-toggle="modal" data-target="#project2" data-backdrop="true">
+					<img class="imgTribute" src="images/tributePage.jpg" data-toggle="modal" data-target="#project2" data-backdrop="true">
 					<figcaption><strong>Tribute Page</strong></figcaption>
 				</figure>
 			</div>
@@ -178,7 +178,7 @@
 	       		<div class="col-md-4">
 	       			<figure>
 	            		<a href="https://codepen.io/webdevthierry/full/mPWMEr" target="_blank">
-					 		<img class="imgKwoon" src="images/tributePage.jpg">
+					 		<img class="imgTribute" src="images/tributePage.jpg">
 						</a>
 						<figcaption><strong>Click on the image to see the codepen</strong></figcaption>
 					</figure>
