--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,10 @@
 
 	<div class="container-fluid">
 		<div class="row">
+
+
 			<div class="col-sm-offset-1 col-sm-11">
+			<p><i class="fa fa-thumbs-up" aria-hidden="true" style="color: blue"></i> You like my work?	Available immediately in Lyon.</p>
 				<p>Contact me if you want to hire me or just say hi !</p>
 			</div>
 		</div>
