--- a/index.html
+++ b/index.html
@@ -56,10 +56,19 @@
 	}
 	
 
-	
+
 	.text, .text1, .text2, .text3
 	{
 		font-size: 1.2em;
+	}
+
+	.footer
+	{
+		position: absolute;
+		bottom: 0;
+		width: 100%;
+		background-color: #f5f5f5;
+
 	}
 
 	</style>
@@ -91,7 +100,6 @@
 						<a href="contact.html" disabled><img class="flag1" src="images/EngFlag.png" ></a>
 				</ul>
 			</div>
-
 		</div>
 	</nav>
 
@@ -105,6 +113,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div style="height: 20px"></div>
+			<h2 style="text-align: center">Full-Stack Web Developer</h2>
 
 			<div class="col-sm-offset-1 col-xs-11">
 			<p class="text">Create websites that are:</p>
@@ -117,14 +126,14 @@
 		</div>
 	</div>
 
-	<nav class="copyright navbar-fixed-bottom">
+	<footer class="footer">
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-6">
-				<p><i class="fa fa-copyright"></i> 2016 Webdevthierry. All rights reserved.</p>
+				<p class="copyright"><i class="fa fa-copyright"></i> 2016 Webdevthierry. All rights reserved.</p>
 			</div>
 			<div class="col-xs-6" style="text-align:right;">
-				<ul class="list-inline">
+				<ul class="list-inline copyright">
 					<li><a href="http://fr.linkedin.com/in/horthierry" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
 					<li><a href="http://www.viadeo.com/fr/profile/thierry.hor" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
 					<li><a href="https://github.com/webdevthierry" target="_blank"><i id="github" class="fa fa-2x fa-github-square"></i></a></li>
@@ -133,7 +142,7 @@
 		</div>
 			
 	</div>
-	</nav>
+	</footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
