--- a/index.html
+++ b/index.html
@@ -1,148 +1,125 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 <head>
-	<title>Home</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <title>Home</title>
+    <meta charset="utf-8">
+    <meta name="description" content="Hello, I'm Thierry HOR. I'm a Full-Stack Web Developer and this is my portfolio.">
+    <meta name="keywords" content="Full-Stack Web Developer, services, responsive, awesome websites">
+    <meta name="author" content="Thierry HOR">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Quattrocento+Sans" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="master.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Quattrocento+Sans" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="master.css">
 
-	<style>
+    <style>
 
-	.iphone
-	{
-		position: absolute;
-		right: 28%;
-		top: 180px;
-		min-width: 50px;
-		width: 16%;
-		z-index: 2;
-	}
-	
-	.portfolioIphone
-	{
-		position: absolute;
-		right: 28.7%;
-		top: 214px;
-		min-width: 80px;
-		width: 14%;
-		z-index: 2;
-	}
+    .portfolioIphone
+    {
+        position: absolute;
+        right: 28%;
+        top: 100px;
+        width: 50px;
+        width: 16%;
+        z-index: 2;
+    }
 
-	.portfolioTablet
-	{
-		position: absolute;
-		right: 14%;
-		top: 100px;
-		min-width: 200px;
-		width: 22%;
-	}
-	
-	.flag1, .flag
-	{
-		width: 20px;
-		margin-right: 10px;
-		margin-left: 20px;
-		
-	}
+    .portfolioTablet
+    {
+        position: absolute;
+        right: 14%;
+        top: 20px;
+        width: 200px;
+        width: 22%;
+    }
+    
+    .text, .text1, .text2, .text3
+    {
+        font-size: 1.2em;
+    }
 
-	.flag1
-	{
-		margin-top:-10px;
-	}
-	
+    .caret, .caret:before, .caret:after
+    {
+        content: "\e003" !important;
+    }
 
-
-	.text, .text1, .text2, .text3
-	{
-		font-size: 1.2em;
-	}
-
-	.footer
-	{
-		position: absolute;
-		bottom: 0;
-		width: 100%;
-		background-color: #f5f5f5;
-
-	}
-
-	</style>
+    </style>
 
 </head>
 
 <body>
 
-	<nav class="navbar navbar-default navbar-fixed-top">
-		<div class="container-fluid">
-			<div class="navbar-header">
-			  <button type="button" id="navbarBg" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
-		        <span class="sr-only">Toggle navigation</span>
-		        <span class="barColor icon-bar"></span>
-		        <span class="barColor icon-bar"></span>
-		        <span class="barColor icon-bar"></span>
-		      </button>
-				<a class="navbar-brand brandName" href="index.html">Thierry</a>
-			</div>
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+              <button type="button" id="navbarBg" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="barColor icon-bar"></span>
+                <span class="barColor icon-bar"></span>
+                <span class="barColor icon-bar"></span>
+              </button>
+                <a class="navbar-brand brandName" href="index.html">Thierry</a>
+            </div>
 
-			<div class="collapse navbar-collapse" id="menu">
-				<ul class="nav navbar-nav navbar-right">
-					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="skills.html">Skills</a></li>
-					<li><a href="portfolio.html">Portfolio</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="contact.html">Contact</a></li>
-						<a href="skills.html"><img class="flag" src="images/frFlag.png"></a><br>
-						<a href="contact.html" disabled><img class="flag1" src="images/EngFlag.png" ></a>
-				</ul>
-			</div>
-		</div>
-	</nav>
+            <div class="collapse navbar-collapse" id="menu">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="skills.html">Skills</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                        <a href="skills.html"><img class="flag" src="images/frFlag.png"></a><div style="margin-top: -7px"></div>
+                        <a href="contact.html"><img class="flag1" src="images/EngFlag.png" ></a>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-	<div class="container-fluid">
-		<div class="row titleBorder">
-			<div class="col-sm-offset-1 col-xs-11">
-				<h3 class="title">Create awesome websites</h3>
-			</div>
-		</div>
-	</div>
-	<div class="container-fluid">
-		<div class="row">
-			<div style="height: 20px"></div>
-			<h2 style="text-align: center">Full-Stack Web Developer</h2>
+    <section>
+    <div class="container-fluid">
+        <div class="row titleBorder">
+            <div class="col-sm-offset-1 col-xs-11">
+                <h2 class="title">Create awesome websites</h2>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+        <h1 style="text-align: center">Thierry HOR</h1>
+            <h2 style="text-align: center">Full-Stack Web Developer</h2>
 
-			<div class="col-sm-offset-1 col-xs-11">
-			<p class="text">Create websites that are:</p>
-			<p class="text1 text-primary"><i class="fa fa-check" aria-hidden="true"></i> Up-to-date</p>
-			<p class="text2 text-primary"><i class="fa fa-check" aria-hidden="true"></i> Responsive <i class="fa fa-mobile" aria-hidden="true"></i> <i class="fa fa-tablet" aria-hidden="true"></i> <i class="fa fa-desktop" aria-hidden="true"></i></p>
-			<p class="text3 text-primary"><i class="fa fa-check" aria-hidden="true"></i> And of course awesome!</p>
-				<img src="images/portfolioIphone.png" class="iphone hidden-xs hidden-sm">
-				<img src="images/portfolioTablet.png" class="portfolioTablet hidden-xs hidden-sm">
-			</div>
-		</div>
-	</div>
+            <div class="col-sm-offset-1 col-xs-11">
+            <p class="text">Create websites that are:</p>
+            <p class="text1 text-primary"><i class="fa fa-check-square-o" aria-hidden="true"></i> Up-to-date</p>
+            <p class="text2 text-primary"><i class="fa fa-check-square-o" aria-hidden="true"></i> Responsive <i class="fa fa-mobile" aria-hidden="true"></i> <i class="fa fa-tablet" aria-hidden="true"></i> <i class="fa fa-desktop" aria-hidden="true"></i></p>
+            <p class="text3 text-primary"><i class="fa fa-check-square-o" aria-hidden="true"></i> And of course awesome!</p>
+                <img src="images/portfolioIphone.png" alt="Portfolio on Smartphone" class="portfolioIphone hidden-xs hidden-sm">
+                <img src="images/portfolioTablet.png" alt="Portfolio on Tablet" class="portfolioTablet hidden-xs hidden-sm">
+            </div>
+        </div>
+    </div>
+        <div class="hidden-xs" style="height: 350px;"></div>
 
-	<footer class="footer">
-	<div class="container">
-		<div class="row">
-			<div class="col-xs-6">
-				<p class="copyright"><i class="fa fa-copyright"></i> 2016 Webdevthierry. All rights reserved.</p>
-			</div>
-			<div class="col-xs-6" style="text-align:right;">
-				<ul class="list-inline copyright">
-					<li><a href="http://fr.linkedin.com/in/horthierry" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
-					<li><a href="http://www.viadeo.com/fr/profile/thierry.hor" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
-					<li><a href="https://github.com/webdevthierry" target="_blank"><i id="github" class="fa fa-2x fa-github-square"></i></a></li>
-				</ul>
-			</div>
-		</div>
-			
-	</div>
-	</footer>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-6">
+                    <p class="copyright"><i class="fa fa-copyright"></i> 2016 Webdevthierry. All rights reserved.</p>
+                </div>
+                <div class="col-xs-6" style="text-align:right;">
+                    <ul class="list-inline copyright">
+                        <li><a href="http://fr.linkedin.com/in/horthierry" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
+                        <li><a href="http://www.viadeo.com/fr/profile/thierry.hor" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
+                        <li><a href="https://github.com/webdevthierry" target="_blank"><i id="github" class="fa fa-2x fa-github-square"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
