--- a/skills.html
+++ b/skills.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 <head>
     <title>Skills</title>
     <meta charset="utf-8">
+    <meta name="description" content="These are my web development and language skills.">
+    <meta name="keywords" content="HTML5, CSS3, Bootstrap, JQuery, PHP, MySQL, Git, trilingual, translation">
+    <meta name="author" content="Thierry HOR">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -13,17 +16,41 @@
     <link rel="stylesheet" type="text/css" href="master.css">
     <style>
 
-    img
+    .skills
     {
         height: 100px;
     }
+
+.fa-star
+{
+    color: yellow;
+    text-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);"
+}
+
+.spinner {
+  text-align: center;
+  animation-name: spin, depth;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-duration: 3s;
+}
+@keyframes spin {
+  from { transform: rotateY(0deg); }
+  to { transform: rotateY(-360deg); }
+}
+@keyframes depth {
+  0% { text-shadow: 0 0 black; }
+  25% { text-shadow: 1px 0 black, 2px 0 black, 3px 0 black, 4px 0 black, 5px 0 black; }
+  50% { text-shadow: 0 0 black; }
+  75% { text-shadow: -1px 0 black, -2px 0 black, -3px 0 black, -4px 0 black, -5px 0 black; }
+  100% { text-shadow: 0 0 black; }
+}
 
     </style>
 
 </head>
 
 <body>
-
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -43,11 +70,14 @@
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <a href="skills.html"><img class="flag" src="images/frFlag.png"></a><br>
+                    <a href="contact.html" disabled><img class="flag1" src="images/EngFlag.png" ></a>
                 </ul>
             </div>
 
         </div>
     </nav>
+<section>
 
     <div class="container-fluid">
         <div class="row titleBorder">
@@ -63,7 +93,7 @@
        
         <div class="row">
             <div class="col-md-4 col-sm-6 text-center">
-                <img class="imgHtml animSkill" src="images/html5css3.png">
+                <img class="imgHtml skills animSkill" src="images/html5css3.png" alt="Skill HTML5 & CSS3">
                 <div class="progress">
             <div class="progress-bar progress-bar-info animHtml" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
                 <span class="sr-only">80% Complete</span>
@@ -72,7 +102,7 @@
             </div>
 
             <div class="col-md-4 col-sm-6 text-center">
-                <img class="imgBootstrap animSkill" src="images/bootstrap.png">
+                <img class="imgBootstrap skills animSkill" src="images/bootstrap.png" alt="Skill Bootstrap">
                 <div class="progress">
             <div class="progress-bar progress-bar-info animBootstrap" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
                 <span class="sr-only">70% Complete</span>
@@ -81,16 +111,15 @@
             </div>
 
             <div class="col-md-4 col-sm-6 text-center">
-                <img class="imgJquery animSkill" src="images/jquery.png">
+                <img class="imgJquery skills animSkill" src="images/jquery.png" alt="Skill JQuery">
                 <div class="progress">
                     <div class="progress-bar progress-bar-info animJQuery" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
                     <span class="sr-only">50% Complete</span>
-   
                     </div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6 text-center">
-                <img class="imgPhp animSkill" src="images/php.png">
+                <img class="imgPhp skills animSkill" src="images/php.png" alt="Skill PHP">
                 <div class="progress">
             <div class="progress-bar progress-bar-info animPhp" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
                 <span class="sr-only">60% Complete</span>
@@ -99,7 +128,7 @@
             </div>
 
             <div class="col-md-4 col-sm-6 text-center">
-                <img class="imgMysql animSkill" src="images/mysql.png">
+                <img class="imgMysql skills animSkill" src="images/mysql.png" alt="Skill MySQL">
                 <div class="progress">
             <div class="progress-bar progress-bar-info animMysql" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
                 <span class="sr-only">60% Complete</span>
@@ -108,33 +137,49 @@
             </div>
 
             <div class="col-md-4 col-sm-6 text-center">
-                <img class="imgGit animSkill" src="images/git.png">
+                <img class="imgGit skills animSkill" src="images/git.png" alt="Skill Git">
                 <div class="progress">
-            <div class="progress-bar progress-bar-info animGit" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                <span class="sr-only">60% Complete</span>
-            </div>
+                    <div class="progress-bar progress-bar-info animGit" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                        <span class="sr-only">60% Complete</span>
+                    </div>
                 </div>
             </div>
         </div>
+        <h3>Languages: </h3>
+        <div class="row">
+            <div class="col-sm-3">
+                <p>French:
+                <br>English:
+                <br>Cambodian (Khmer):
+                </p>
+            </div>
+            <div class="col-sm-9" style="margin: 10px 0;">
+                <i class="fa fa-star fa-3x spinner" aria-hidden="true"></i><i class="fa fa-star fa-3x spinner" aria-hidden="true"></i><i class="fa fa-star fa-3x spinner" aria-hidden="true"></i><i class="fa fa-star fa-3x spinner" aria-hidden="true"></i>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <p>I have done translation in all 3 languages.</p>
+            </div>
+        </div>
     </div>
-
-    <nav class="copyright navbar-fixed-bottom">
-	<div class="container">
-		<div class="row">
-			<div class="col-xs-6">
-				<p><i class="fa fa-copyright"></i> 2016 Webdevthierry. All rights reserved.</p>
-			</div>
-			<div class="col-xs-6" style="text-align:right;">
-				<ul class="list-inline">
-					<li><a href="http://fr.linkedin.com/in/horthierry" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
-					<li><a href="http://www.viadeo.com/fr/profile/thierry.hor" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
-					<li><a href="https://github.com/webdevthierry" target="_blank"><i id="github" class="fa fa-2x fa-github-square"></i></a></li>
-				</ul>
-			</div>
-		</div>
-			
-	</div>
-	</nav>
+</section>
+    <footer>
+    	<div class="container">
+    		<div class="row">
+    			<div class="col-xs-6">
+    				<p class="copyright"><i class="fa fa-copyright"></i> 2016 Webdevthierry. All rights reserved.</p>
+    			</div>
+    			<div class="col-xs-6" style="text-align:right;">
+    				<ul class="list-inline copyright">
+    					<li><a href="http://fr.linkedin.com/in/horthierry" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
+    					<li><a href="http://www.viadeo.com/fr/profile/thierry.hor" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
+    					<li><a href="https://github.com/webdevthierry" target="_blank"><i id="github" class="fa fa-2x fa-github-square"></i></a></li>
+    				</ul>
+    			</div>
+    		</div>
+    	</div>
+	</footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
