Title changed in all pages, CSS code improved, indentation made

--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 
 <html lang="en">
 <head>
-    <title>Contact</title>
-    <meta charset="utf-8">
+    <title>Hire me or leave a message</title>
+    <meta charset="UTF-8">
     <meta name="description" content="Full-Stack Web Developer available immediately in Lyon, Contact me if you want to hire me or just say hi!">
     <meta name="keywords" content="Full-Stack Web Developer, hire me, available, Lyon">
     <meta name="author" content="Thierry HOR">
@@ -20,6 +20,11 @@
     .iconPad
     {
         padding-right:15px;
+    }
+
+    .thumbs
+    {
+        color: blue;
     }
 
     </style>
@@ -64,7 +69,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-offset-1 col-sm-11">
-            <p><i class="fa fa-thumbs-up" aria-hidden="true" style="color: blue"></i> You like my work?</p><p>Available immediately in Lyon.</p>
+            <p><i class="fa fa-thumbs-up thumbs" aria-hidden="true"></i> You like my work?</p><p>Available immediately in Lyon.</p>
                 <p>Contact me if you want to hire me or just say hi!</p>
             </div>
         </div>
@@ -101,7 +106,7 @@
             <div class="col-xs-6">
                 <p class="copyright"><i class="fa fa-copyright"></i> 2016 Webdevthierry. All rights reserved.</p>
             </div>
-            <div class="col-xs-6" style="text-align:right;">
+            <div class="col-xs-6 socialCol">
                 <ul class="list-inline copyright">
                     <li><a href="http://fr.linkedin.com/in/horthierry" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
                     <li><a href="http://www.viadeo.com/fr/profile/thierry.hor" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
