--- a/about.html
+++ b/about.html
@@ -6,12 +6,15 @@
     <meta charset="UTF-8">
 
     <meta name="description" content="Self introduction and my background.">
-    <meta name="keywords" content="Full-Stack Web Developer, Work experience, Education, Interests">
+    <meta name="keywords" content="Full-Stack Web Developer, Experience, Education, Interests">
     <meta name="author" content="Thierry HOR">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Quattrocento+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CQuattrocento+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 
     <link rel="stylesheet" type="text/css" href="master.css">
@@ -33,7 +36,6 @@
     {
         display:block;
         margin: 10px auto;
-        border-radius: 50%;
         width: 5em;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
@@ -162,12 +164,12 @@
     <div class="container-fluid profileContainer">
         <div class="row">
             <div class="col-sm-offset-1 col-sm-9 profileIntro">
-                <p>Full-Stack Web Developer for about a year. I like learning new things and getting better everyday.</p>
+                <p>Full-Stack Web Developer for more than a year. I like learning new things and getting better everyday.</p>
                 <p>I am known for my punctuality and for being a hard-working person.</p>
             </div>
             <div class="col-sm-2">
                 <figure>
-                        <img id="profile" src="images/photo2.jpg" alt="Thierry HOR">
+                        <img class="img-circle" id="profile" src="images/photo2.jpg" alt="Thierry HOR">
                         <figcaption class="profileCaption">Thierry HOR</figcaption>
                 </figure>
             </div>
@@ -228,7 +230,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td colspan="4" class="cvText">For more information, check out my <em><a href="ThierryCV.pdf" title="My CV in PDF format" download="Thierry's CV - Full-Stack Web Developer">CV <i class="fa fa-file-pdf-o" aria-hidden="true"></i></a></em>
+                        <td colspan="4" class="cvText">For more information, check out my <em><a href="ThierryCV.pdf" title="My CV in PDF format" download="Thierry's CV - Full-Stack Web Developer.pdf">CV <i class="fa fa-file-pdf-o" aria-hidden="true"></i></a></em>
                         </td>
                     </tr>
                 </table>
@@ -294,21 +296,20 @@
     </section>
 
     <footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-6">
-                <p class="copyright"><i class="fa fa-copyright"></i> 2016 Webdevthierry. All rights reserved.</p>
-            </div>
-            <div class="col-xs-6 socialCol">
-                <ul class="list-inline copyright">
-                    <li><a href="http://fr.linkedin.com/in/horthierry" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
-                    <li><a href="http://www.viadeo.com/fr/profile/thierry.hor" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
-                    <li><a href="https://github.com/webdevthierry" target="_blank"><i id="github" class="fa fa-2x fa-github-square"></i></a></li>
-                </ul>
-            </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-6">
+                    <p class="copyright"><i class="fa fa-copyright"></i> 2016 Webdevthierry. All rights reserved.</p>
+                </div>
+                <div class="col-xs-6 socialCol">
+                    <ul class="list-inline copyright">
+                        <li><a href="http://fr.linkedin.com/in/horthierry" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
+                        <li><a href="http://www.viadeo.com/fr/profile/thierry.hor" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
+                        <li><a href="https://github.com/webdevthierry" target="_blank"><i id="github" class="fa fa-2x fa-github-square"></i></a></li>
+                    </ul>
+                </div>
+            </div>               
         </div>
-            
-    </div>
     </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
