--- a/portfolio.html
+++ b/portfolio.html
@@ -4,14 +4,17 @@
 <head>
     <title>These are my projects</title>
     <meta charset="UTF-8">
-    
+
     <meta name="description" content="These are my personal projects, they are all responsive.">
     <meta name="keywords" content="portfolio, responsive, personal projects">
     <meta name="author" content="Thierry HOR">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Quattrocento+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CQuattrocento+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 
     <link rel="stylesheet" type="text/css" href="master.css">
@@ -114,14 +117,14 @@
             <div class="row">           
                 <div class="col-md-4 col-sm-6 colPortfolio text-center">
                     <figure>
-                        <img class="imgKwoon" src="images/kwoonIntegration.png" alt="Front-End Project" data-toggle="modal" data-target="#project1" data-backdrop="true">
+                        <img class="imgKwoon img-thumbnail" src="images/kwoonIntegration.png" alt="Front-End Project" data-toggle="modal" data-target="#project1" data-backdrop="true">
                         <figcaption><strong>Front-End Project</strong></figcaption>
                     </figure>
                 </div>
 
                 <div class="col-md-4 col-sm-6 colPortfolio text-center">
                     <figure>
-                        <img class="imgTribute" src="images/tributePage.jpg" alt="Tribute Page" data-toggle="modal" data-target="#project2" data-backdrop="true">
+                        <img class="imgTribute img-thumbnail" src="images/tributePage.jpg" alt="Tribute Page" data-toggle="modal" data-target="#project2" data-backdrop="true">
                         <figcaption><strong>Tribute Page</strong></figcaption>
                     </figure>
                 </div>
@@ -150,7 +153,7 @@
                     <div class="col-md-4">
                       <figure>
                             <a href="https://github.com/webdevthierry/Projet-Integration" title="source code of the project" target="_blank">
-                                <img class="imgKwoon2" src="images/kwoonIntegration.png" alt="Front-End Project">
+                                <img class="imgKwoon2 img-thumbnail" src="images/kwoonIntegration.png" alt="Front-End Project">
                             </a>
                             <figcaption>
                                 <strong>Click on the image to see the source code</strong>
@@ -187,7 +190,7 @@
                     <div class="col-md-4">
                         <figure>
                             <a href="https://codepen.io/webdevthierry/full/mPWMEr" title="Tribute page in Codepen" target="_blank">
-                                <img class="imgTribute2" src="images/tributePage.jpg" alt="Tribute Page">
+                                <img class="imgTribute2 img-thumbnail" src="images/tributePage.jpg" alt="Tribute Page">
                             </a>
                             <figcaption>
                                 <strong>Click on the image to see the codepen</strong>
