language flags added in all pages

--- a/skills.html
+++ b/skills.html
@@ -116,8 +116,9 @@
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <a href="skills.html"><img class="flag" src="images/frFlag.png"></a><br>
-                    <a href="contact.html" disabled><img class="flag1" src="images/EngFlag.png" ></a>
+                    <a href="skills.html"><img class="flag" src="images/frFlag.png"></a>
+                    <div class="div-7"></div>
+                    <a href="contact.html"><img class="flag1" src="images/EngFlag.png"></a>
                 </ul>
             </div>
 
