--- a/portfolio.html
+++ b/portfolio.html
@@ -95,6 +95,9 @@
                     <li class="active"><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <a href="skills.html"><img class="flag" src="images/frFlag.png"></a>
+                    <div class="div-7"></div>
+                    <a href="contact.html"><img class="flag1" src="images/EngFlag.png"></a>
                 </ul>
             </div>
         </div>
